fixed layout issue

--- a/src/components/Tabs/Tabs.scss
+++ b/src/components/Tabs/Tabs.scss
@@ -1,8 +1,11 @@
 #dashTabs {
   border: solid grey;
+  background-color: black;
+  color: white;
   border-radius: 15px;
   padding: 1%;
-  width: 75%;
+  width: 70%;
   height: 400px;
-  margin-left: 2%;
+  margin-left: 27%;
+  margin-top: -22%;
 }
